restructured annotations,added IntegerGenTest
Took 1 hour 25 minutes